--- a/style.css
+++ b/style.css
@@ -1,3 +1,15 @@
+#header-nav {
+    background-color: pink; 
+    color: darkgreen;
+    padding: 15px 20px;
+    width: 100%;  
+    
+     
+    display: flex;
+     
+    justify-content: space-between; 
+}
+
 body {
     background-color: orange;
 display: flex;
@@ -53,6 +65,13 @@ padding: 10px;
 
 h1 {
         font-size: 50px; /* 從 150px 縮小到 50px */
+    }
+
+#header-nav {
+         
+        flex-direction: column; 
+        
+        align-items: center; 
     }
 }
 
